feat: directory page

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -521,3 +521,63 @@ form label.top input:required:valid {
 .thank-you p {
   padding-bottom: .5rem;
 }
+
+.members-container.card > li {
+  border: 2px solid var(--primary-color);
+  border-radius: 4px;
+  text-align: center;
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.members-container.card img {
+  border-radius: 8px;
+}
+
+.members-container.card h3 {
+  border-radius: 8px;
+  padding: 1rem;
+}
+
+.members-container.list > li {
+  border-bottom: 1px solid var(--primary-color);
+  border-radius: 4px;
+  padding: 1rem;
+  margin: 1rem 0;
+}
+
+.members-container.list img {
+  display: none;
+}
+
+.toggle-view {
+  border: 1px solid var(--primary-color);
+  padding: .5rem;
+  border-radius: 8px;
+  background-color: transparent;
+  margin: 0 auto 1rem auto;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 600;
+} 
+
+.members-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.directory-card-text {
+  overflow: hidden;
+}
+
+.members-container.list > li:nth-child(even) {
+  background-color: rgba(205, 231, 231, 0.541);
+}
+
+.members-container.list > li:nth-child(odd) {
+  background-color: rgba(156, 180, 180, 0.541);
+}
+
+.members-container.card {
+  max-width: 100%;
+}
