--- a/chamber/styles/desktop.css
+++ b/chamber/styles/desktop.css
@@ -71,4 +71,9 @@
   footer {
     min-width: 1024px;
   }
+
+  .members-section .members-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
