--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -278,4 +278,35 @@
     flex-direction: row;
     gap: 20px;
   }
+
+  .members-section .members-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+  }
+
+  .members-container.list > li {
+    display: flex;
+    grid-column: 1/2;
+    width: 100%;
+    border-bottom: 1px solid var(--primary-color);
+    border-radius: 4px;
+    margin: 1rem 0 1rem .5rem;
+    gap: 18px;
+  }
+
+  .members-container.card > li {
+    width: 100%;
+    max-width: 340px;
+  }
+
+  .members-container.list .directory-card-text {
+    display: flex;
+    gap: 10px;
+  }
+
+  .members-container.list h3 {
+    text-align: center;
+  }
+
 }
