--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -279,7 +279,7 @@
     gap: 20px;
   }
 
-  .members-section .members-container {
+  .members-section .members-container.card {
     display: grid;
     grid-template-columns: 1fr 1fr;
     place-items: center;
